--- a/static/assignment564/fe564.Rmd
+++ b/static/assignment564/fe564.Rmd
@@ -92,7 +92,7 @@ $$F_0=\frac{\frac{SSE_{Reduced}-SSE_{Full}}{dfE_{Reduced}-dfE_{Full}}}{\frac{SSE
 
 In this conceptual form, the numerator degrees of freedom is $\nu_1=3$, denominator is $\nu_2=31$.
 
-After transformed to a colsed form, The numerator is 31, denominator is 3.
+After transformed to a closed form, The numerator is 31, denominator is 3.
 
 
 (c).
@@ -117,7 +117,7 @@ ggpairs(data=table_wf[c(1:10)])
 
 (b) Which predictors are significantly related to (most likely to contribute to the variation in) the response variable.
 
-Based on scatterplots and correlation, $Cor(y,x_4)=0.866, Cor(y,x_1)=0.781, Cor(y,x_7)=0.668, Cor(y,x_2)=0.666$ have medium to strong positive linear relationship to the response variable (Correlation coefficient is more than 0.6). $Cor(y,x_5)=-0.62$ has medium negative linear relationship to the response variable.
+Based on scatterplots and correlation, $Cor(y,X_4)=0.866, Cor(y,X_1)=0.781, Cor(y,X_7)=0.668, Cor(y,X_2)=0.666$. X4, X1, X7, X2 have medium to strong positive linear relationship to the response variable (Correlation coefficient is more than 0.6). X5 has medium negative linear relationship to the response variable ($Cor(y,x_5)=-0.62$).
 
 ****
 
@@ -280,7 +280,7 @@ all possible      |	  /   | X3,X4,X6,X7,X8,X9 | X1,X2,X5
 Both models solved the problem of multicollinearity (VIF <10), and small P-values for F test. They don't have serious violation of assumptions about the errors (There is no significant pattern on the plot of studentized residuals versus predicted values from the model with only one predictor. The partial regression plots do not show nonlinear patterns. The points follow approximately straight line on the qq plot). Both of Correlation between observed residuals and expected residuals under normality.The 6-predictor model got 0.9837263 P-value while the 6-predictor model got 0.9856766. 
 
 |    Model  | VIF |   F  |P-value(F)           | MSR  | MSE |$R_{adjusted}^2$|$R_{Predict}^2$|P-value(t)| Residuals Plots 
-|----       |---- |----  | ------              | ---- | ----| ----           | ----          | -------- | ----------
+|-----      |---- |----  | ------              | ---- | ----| ----           | ----          | -------- | ----------
 3-4-7       | <10 |70.378|$1.312\times10^{-12}$|21.188|0.301| 0.878          | 0.854         |Max=0.054 | Good enough
 3-4-6-7-8-9 | <10 |68.16 |$1.717\times10^{-13}$|11.265|0.165| 0.933          | 0.908         |Max=0.019 | Good enough
 
@@ -348,7 +348,7 @@ where the dependent variables can either be total storm flow volume ($Q_t$) in m
 Inspired by this theory, I divided the variables to 4 groups:
 
 |      P      |    F    |    | Q    
-|     ----    |  ----   | --------------- | -----------------
+|     ----    |  -----   | --------------- | -----------------
 |Precipitation|   Time  | Terrain |Surface
 |      x8     |     x9  |x1: Area of watershed ($mi^2$) |x2: Area impervious to water ($mi^2$)
 |   Rainfall  |Time period during      |x3: Average slope of watershed (percent)| x5: surface absorbency index
