--- a/static/assignment561/fe561.Rmd
+++ b/static/assignment561/fe561.Rmd
@@ -76,7 +76,7 @@ $$=P(\frac{2+\sqrt3}4a+\frac{2-\sqrt3}4b<X<\frac{2-\sqrt3}4a+\frac{2+\sqrt3}4b)$
 
 According to Chebyshev's Inequality: for constant k>0, $P(|X−\mu|<\sigma k)\ge1-\frac{1}{k^2}$. Since k=1.5, thus
 
-$$P(\mu−1.5\sigma<X<\mu+1.5\sigma)=P(|X−\mu|<1.5\sigma)\ge1−\frac1{{1.5}^2}=\mathbf{0.5555556}$$
+$$P(\mu−1.5\sigma<X<\mu+1.5\sigma)=P(|X−\mu|<1.5\sigma)\ge1−\frac1{1.5}^2}=\mathbf{0.5555556}$$
 
 The result shows that  $P(\mu−1.5\sigma<X<\mu+1.5\sigma)$ is larger than the amount guaranteed by Chebyshev's Inequality. Chebyshev's Inequality provides a conservative amount.
 
