--- a/static/lecture561/lecture00.Rmd
+++ b/static/lecture561/lecture00.Rmd
@@ -852,7 +852,7 @@ dbinom(45, 1000, 0.05, log = FALSE)
 
 ```
 
-$Poisson(\mu=50), P(X=45)=\frac{{50}^{45}}{45!}e^{-50}=0.045826$
+$Poisson(\mu=50), P(X=45)=\frac{50^{45}}{45!}e^{-50}=0.045826$
 
 ```{r}
 dpois(45, 50, log = FALSE)
