arrange 564 hw 2nd

--- a/docs/assignment564/hw564.Rmd
+++ b/docs/assignment564/hw564.Rmd
@@ -9,6 +9,14 @@ output:
 
 ---
 
+
+```{r setup, include=F}
+knitr::opts_chunk$set(message=FALSE, warning=F, echo=TRUE)
+options(width = 2000)
+options(repos="https://cran.rstudio.com")
+```
+
+
 # {.tabset .tabset-fade .tabset-pills}
 
 ## HW0
