--- a/docs/usp537/note_usp537.Rmd
+++ b/docs/usp537/note_usp537.Rmd
@@ -320,20 +320,309 @@ What are the mode splits estimated by this model?
 
 V = -0.874 Dtag+ 0.0239 IncDtag–0.767 ForLangDtag–0.785 Dlane–0.356 c –0.150 t –0.217 R + other terms
   
+
+## Accessibility and Economic Opportunity
+
+“post-war changes in urban structure and urban transportation systems have conferred significant improvements and greater satisfactions on the majority, [but] they almost certainly have caused a relative deterioration in the access to opportunities, if not in the actual mobility of a significant fraction of the poor.”
+–Meyer (1968)
+
+### Spatial Mismatch Hypothesis
+
+ - Kain(1968): 
+ 
+ Employment opportunities; Workers
+ 
+ - Concentration of jobs increased in suburbs 
+
+white households dispersed to suburban areas while black households remained in central cities
+
+black households are now located far away from suburban jobs
+
+ - Suburbanization of jobs (Fujita and Thisse2002; Cerveroet al. 2002; Iceland and Harris 1998)
+
+ - Disconnection of black households from jobs (Martin 2001; Raphael and Stoll 2002; Stoll 2006)
+
+### Factors of Spatial Mismatch Hypothesis
+
+ - Gobillonet al (2007)
+  * Commuting costs are high
+  * Job search efficiency decreases with distance to jobs (information)
+  * Distant workers search less intensively
+  * High search costs cause workers to restrict spatial search
+  * Employer discrimination: redlining or statistical discrimination
+  * Employer refuse to hire distant workers
+  * Customer discrimination
+
+### Policy Directions
+
+ - Bring jobs to people
+ - Bring people to jobs
+ - Connecting people to jobs
+
 ## III. Transportation and Land Use
 
+#### General concepts
 
+ - R = annual rental payment for land (reflecting highest private use value of land)
+ - Market Value = R / interest rate
+ - Land rent is input cost of production
+
+#### Transportation & Land Use
+
+ - Bid-rent function: the willingness-to-pay (WTP) for a piece of land for a given level of profit (per acre)
+ 
+ - Firm location choice
+ 
+ - Household location choice
+
+#### Location equilibrium in monocentriccity
+
+### Application: Streetcar
+
+#### Relative locations before streetcar
+
+#### Effect #1: Reduced commute cost
+
+#### Effect #2-1: Reduced wage effects on residential bid rents
+
+#### Effect #2-2: Reduced wage effects on business bid rents
+
+#### Transportation ; Land use
+
+#### Technologies and their effects on travel speeds and times
+
+#### International comparisons
 
 ## IV. Project Evaluation
 
+ - Cost-benefit analysis (CBA)
+  * Pareto improvements?
+  * Potential Pareto improvements (Kaldor-Hicks Criteria)
+ - Why perform CBA for transportation choices?
+  * Limited funding for transportation investments
+  * Linkages between transportation investments and land use, economic, environmental and energy policy concerns
 
+ - Net Social Benefit
+  * NSB = Benefit – Cost
+   1. Specify alternatives/define situation
+   2. Decide whose benefits and costs count (standing)
+   3. Identify the impact categories (benefits or costs) & measurement indicators
+   4. Predict the quantitative impacts over the life
+   5. Monetize impacts
+   6. Discount benefits & costs to obtain present values
+   7. Compute NPV of each alternative
+   8. Perform sensitivity analysis
+   9. Make recommendation
+
+#### #1-#2: Define the situation & scope
+
+ - Changes in resource allocation
+ - Comparing between alternatives
+  * What resources are at stake?
+  * What jurisdiction should CBA be done for?
+
+#### #3: Costs
+
+ - Survey Approach
+ - Engineering Approach
+ - Combined Approach
+
+#### #3: Evaluating Costs
+
+ - Price mechanism  true social value/cost
+ - Shadow price: estimated value of an input or output to the economy or society as a whole
+  * Marginal opportunity cost – value of the best alternative use of the input
+  * Related to market price, but not exactly the same
+
+#### #3: Costs vs Transfers
+
+ - When resources are not used up nor created, but just shifted from one set of individuals to another, we say the resources are transferred.
+ - Transfers
+  * Do not change total resources in the community
+  * Changes distribution of the resources
+
+#### #3: Benifits
+
+ - Types of benefits
+  * Resources measurable in monetary terms: goods and services sold in the market places  Price
+  * Resources measurable in physical units, but not in monetary terms.
+  * Resources valued by the community, but not measurable by any means.
+
+#### #3: Benifits vs Transfers
+
+ - [EX] Are jobs a benefit?
+  * If the economy is at full-employment (which is often the assumption of CBA), the opportunity cost of using workers is that they are not used somewhere else.
+  * Thus, the new jobs are simply a transfer of workers from one sector to another.
+  * Locally: net gains in local employment?
+
+#### #3: Valuing Benefits
+
+ - Types of Values
+  * Use Value
+   + Passive use value
+  * Option Value
+  * Nonuse Value
+   + Existence value
+   + Bequest value
+
+#### #3: Valuing Benefits - Methods
+
+ - Revealed Preference Method – valuing based on actual observable choices
+  * Market Prices: Market demand reflects the consumer’s WTP, so prices can be used to evaluate loss of value
+  * Benefits Transfer
+  * Meta-analysis
+  * Indirect:
+   + Travel cost method
+   + hedonic property values / hedonic wages
+
+#### Revealed Preference – Benefits Transfer
+
+ - Benefits Transfer Approach
+  * The application of existing information & knowledge to new contexts
+  * Useful when collecting primary data and analysis is impractical (cost or time)
+  * 3 important features
+   + Policy context must be well-defined
+   + Data must meet certain criteria
+   + Study site and new site should correspond
+  * Limitations
+
+#### Indirect Revealed Preference – Hedonic Analysis
+
+ - Hedonic Analysis – Uses the changes in prices of related goods to infer a WTP for a healthier environment or less risky environment (with multiple regression analysis)
+  * Hedonic Property Value
+  * Hedonic Wage Method
+
+#### Indirect Revealed Preference – Hedonic Property Value
+ - Hedonic Property Value Example (Mendelsohn et al. 1992)
+  * PCB contamination in New Bedford, MA
+  * Compare change in prices for houses sold before and after contamination became public. Control for all other factors affecting home costs.
+  * Houses closest to the contaminated area: price declines of $9,000; in area of secondary pollution, declines of $7,000. Total damages to home-owners: $36 million
+  * Firms paid out at least $20 million in natural resource damage claims
+
+#### Indirect Revealed Preference – Hedonic Wage Method
+
+ - Hedonic Wage Method – similar to hedonic property value, but attempts to isolate the component of wages that serve to compensate workers in risky occupations for taking on the risk
+
+|Occupation|Wage (hourly)|Risk of Death (statistically)
+|-------|---|---
+Backhoe operator|$15|.0001
+Bulldozer       |$16|.00015
+Grader operator |$17|.0002
+Lawnmower       |$18|.00025
+
+Plot expected earnings over lifetime of workers for various occupations and then extrapolate from the estimated line to get VSL
+
+ - Problems
+  * Accurate information?
+  * Sample selection bias
+  * Involuntary nature of risk
+  * Are labor market choices to accept higher risk really “choices”?
+  * Unpaid workers
+
+#### Value of a Statistical Life (VSL)
+
+ - EPA: $7.8 million  (2008) $6.9 million
+ - Water Division (EPA): $8.7 million
+ - Viscusi meta-analysis study: $3 – 7 million
+ 
+ - EX: Suppose there is regulation costing $18 billion to enforce but will prevent 2,500 deaths. How much is spent to save every life?
+
+$18 billion / 2500 = $7.2 million per life saved
+
+Would it have passed EPA’s CBA in 2006 or 2008?
+
+#### VSL - Policy Implications
+
+ - Cost per life saved ranges from $100,000 for unvented space heaters to $72 billion for a proposed standard to reduce occupational exposure to formaldehyde.
+ 
+ - Assuming that the figures are estimated correctly, how is economic efficiency maximized? (first equimarginal principle)
+  * Policies only when MB > MC
+ - Should the government strive to maximize economic efficiency?
+
+#### #3: Valuing Benefits - Methods
+ - Stated Preference Method – valuing based on a survey where the respondents state their value
+  * Contingent Valuation: Asking through a survey, what value respondents place on preserving a species, for example.
+
+ - Problems involved with Stated Preference
+  * Strategic bias
+  * Information bias
+  * Starting-point bias
+  * Hypothetical bias
+  * WTP vs WTA
+  * “warm glow” effect
+  * Embedding bias – context of problem
+
+#### Stated Preference – Contingent Valuation
+
+ - Economists disagree about the reliability of CV analysis. But doing a ‘state of the art’ job can be very expensive
+  * Analyses of Exxon Valdez oil spill: $3 million
+  * Estimated lost passive use value: $2.8 billion
+ - CVs provide the only available means for estimating nonmarket benefits based primarily on existence value, so they are widely used
+
+#### #6-#7: Discounting and NPV
+
+ - Office of Management & Budget 10-year (whitehouse.gov/omb/) 10%  (1992) 7%  (2013) 2%
+ - Congressional Budget Office: 2%
+ - EPA: 5.875%
+ - EPA Analysis of Waxman-Markey Bill: 5%
+ - Stern Review: 1.4%
+
+#### An Alternative – Cost-Effectiveness Analysis
+
+ - Establish objective (i.e. how much pollution control?)
+ - Optimize (i.e. choose the most cost-effective options given the objective)
 
 ## V. Supply of Transportation
 
+#### LR vs SR Costs
 
+ - Short-run (SR) costs
+  * Some inputs are fixed – machinery, land, infrastructure
+  * Other inputs are variable – labor, materials
+ - Long-run (LR) costs: all inputs are variable
 
-## VI. Pricing and Externalities
+#### Average Costs & Economies of Scale
 
+ - LR average cost (LAC) is the envelop of SR average costs
+ 
+Economies of scale occurs when MC < AC; AC is falling
 
-## VI. Pricing and Externalities
+#### Firm Theory
+
+ - Inputs: K (capital), L (labor)
+ - Output: y = f(K,L)
+ - Costs: C = rK + wL, where w is wage and r is rent
+ - Production isoquants: increasing in inputs, quasi-concave
+ - Firms are profitmaximizing
+  * In other words, they are also cost-minimizing given a production level (and prices for inputs)
+
+#### Firm production function
+
+ - Cobb-Douglas Production Function
+y = f(K,L) = AKαLβ (α, β > 0)
+  * If α+β = 1  constant returns to scale
+  * If α+β > 1  increasing returns to scale
+  * If α+β < 1  decreasing returns to scale
+ - Corresponding cost function:
+ - Taking natural log of both sides:
+
+#### Firm Cost Function
+
+ - Constant elasticity of cost for each input
+ - Elasticity of substitution = 1
+ - Constant share of inputs
+
+#### Example -Caves, Christensen and Tretheway(1983)
+
+ - How do factor prices affect cost?
+ - What are shares of total cost for each factor?
+ - Economies of scale (output)
+ - Economies of density
+  * Increase in output (Y), but not # of points (N)
+ - Economies of size
+  * Increase in both output (Y) and # of points (N)
+ - Economies of scope?
+  * If y1 is passenger and y2 is freight, then economies of scope occur when: C(y1,y2) < C(y1,0) + C(0,y2).
+ - Cost-reducing technological change over time?
+
 
