add 561 FE questions

--- a/docs/stat561/fe_stat561.Rmd
+++ b/docs/stat561/fe_stat561.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 
-#### 1. 
+#### 1. Find the general formula for $\Gamma(\frac{2k+1}2)$, where k is an integer. The answer must be expressed in closed form, using factorials.
 
 For k is an integer, when $k\ge0$
 
@@ -20,7 +20,7 @@ $$\therefore \Gamma(\frac{2k+1}2)=\begin{cases}\mathbf{\frac{(2k)!}{4^{k}k!}\sqr
 
 ****
 
-#### 2. 
+#### 2. A webmaster observes vists to particular website. There are, on the average, 1.5 visits per minute. Find the probability that the webmaster has to wait longer than 8 minutes to observe 10 visits to the site.
 
 Let $T\sim Gamma(\alpha,\beta)$, $T\sim Poisson(\lambda)$. The probability of 10 visits longer than 8 minutes:
 
@@ -47,7 +47,7 @@ Therefore, the probability that 10 visits longer than 8 minutes is 24.24%.
 
 ****
 
-#### 3.
+#### 3. Find the mode (the value of X for which the density is maximized) of the gamma probability distribution, expressed in terms of the parameters α and β.
 
 For $X\sim Gamma$, $f_X(\alpha,\beta)=\frac{1}{\Gamma(a)\beta^{\alpha}}x^{a-1}e^{-\frac{x}\beta},x>0,\beta>0，\alpha>0$
 
@@ -61,7 +61,7 @@ $$(a-1-\frac{x}\beta)=0\implies \mathbf{x=(α-1)β,\quad α\ge1}$$
 
 ****
 
-#### 4.
+#### 4. Assume that X has a uniform distribution with parameters α and β. Find $P(\mu−1.5\sigma<X<\mu+1.5\sigma)$  and compare to the amount guaranted by Chebyshev's inequity.
 
 For $X\sim Uniform(a, b),\ b>a,\ μ=\frac{a+b}2,\sigma^2=\frac{(b-a)^2}{12}$, thus
 
@@ -87,7 +87,7 @@ sqrt(3)/2
 
 ****
 
-#### 5.
+#### 5. An urn contains 2 black balls and 2 white balls. One ball is selected at random, its color is noted, and them a ball of the opposite color is placed in the urn. The process continues until all balls in the urn are the same color. Let X be the number of draws necessary to achieve this goal. Find the mean and variance of the random variable X.
 
 Let x is the number of draws. When $x=1,3,5,7..$, the probability of achieving this goal is 0. When $x=2,4,6,8..$, the probability of achieving this goal is $\frac14$. let $Y=\frac{X}2$. For $Y\sim Geometric(\frac14)$
 
@@ -103,7 +103,7 @@ $$Var[Y]=\frac{1-p}{p^2}=12=Var[\frac{X}2]=\frac{Var[X]}4\implies \mathbf{Var[X]
 
 ****
 
-#### 6. 
+#### 6. Only 5 in 1000 adults are afficted with a rare disease for which a diagnostic test has been deveopled. The test is such that when an individual actually has the disease, a positive result will occur 99% of the time, whereas an individual without the disease will show a positive reuslt only 2% of the time. If a randomly selected individual is tested and the result is positive, what is the probability that the individual has the disease?
 
 Accoridng to the Bayes’s Rule,
 
@@ -119,7 +119,7 @@ The probability of the individual having disease with positive result is 19.92%.
 
 ****
 
-#### 7. 
+#### 7. If X is arandom variable such that $E[X]=3$ and $E[X^2]=13$, determine a lower bound for the probability P(-2<x<8). (Hint: Use a famous inequity that was mentioned a few problem back.)
 
 For $E(X)=3,\ E(x^2)=13$,
 
@@ -137,7 +137,7 @@ $$P(3−k<X<k+3)=P(−2<X<8)\ge 1− \frac4{25}=\mathbf{0.84}$$
 
 ****
 
-#### 8.
+#### 8. Consider the following experiment: You simultaneously toss 6 coins. You count the number of "heads" and record whether it is an even or odd number. Then you toss the 6 coins again. The process continues until the second time that you get an even number of "heads". Let X be the number of tosses reuqired to complete the process. Find the distribution of X and give its mean and variance.
 
 Let $a$ is the number of "head" in each toss, each result is $(a,6-a)$. then $S=\{(0,6),(1,5),(2,4),(33),(42),(5,1),(6,0)\}$. The probability of "even head" is $\frac18+\frac18+\frac18+\frac18=\frac12$.
 
@@ -149,7 +149,11 @@ $$\mathbf{E[X]}=\frac{r}p=\mathbf{4};\quad \mathbf{Var[X]}=\frac{r(1-p)}{p^2}=\m
 
 ****
 
-#### 9.
+#### 9. Let X be a random variable with prability function
+
+$$f_X(x)=\begin{cases}cp(1-p)^{x-1} & x=a,a+1,..\\0 & otherwise,\end{cases}$$
+
+where a is a known positive integer. Find c. Then find the mean and variance of X.
 
 For X is a probability function, let F(X) is the CDF of X,
 
@@ -170,7 +174,7 @@ $$Var(x+1-a)=\mathbf{Var(x)=\frac{1-p}{p^2}}$$
 
 ****
 
-#### 10.
+#### 10. Suppose a random variable X has a probability mass function $p(x)=\frac{\mu^x}{x!}e^{-\mu}, x=0,1,2,..$ Find the values of μ for which x=1 is the unique mode.
 
 This is a Poisson pmf
 
