--- a/static/stat561/note_stat561.Rmd
+++ b/static/stat561/note_stat561.Rmd
@@ -1060,4 +1060,8 @@ Then, X is a random variable with pdf $g(x|\mu,\sigma)=\frac1\sigma f(\frac{x-\m
 
 ## 4 Multiple Random Variables
 
+### 4.1 Joint and Marginal Distributions
 
+### 4.2 Conditional Distributions and Independence
+
+### 4.3 Bivariate Transformations
