--- a/docs/stat561/note_stat561.Rmd
+++ b/docs/stat561/note_stat561.Rmd
@@ -1080,6 +1080,55 @@ $$Eg(X,Y)=\int_{-\infty}^{\infty}\int_{-\infty}^{\infty} g(x, y)f(x, y) dx dy$$.
 
 ### 4.2 Conditional Distributions and Independence
 
-**Definition 4.2.1**
+**Definition 4.2.1** Let (X,Y) be a discrete bivariate random vector with joint pmf f(x,y) and marginal pmfs $f_X(x)$ and $f_Y(y)$. For any x such that $P(X=x)=f_X(x)>0$, the conditional pmf of Y given that $X=x$ is the function of y denoted by $f(y|x)$ are defined by
 
-### 4.3 Bivariate Transformations
+$$f(y|x)=P(Y=y|X=x)=\frac{f(x,y)}{f_X(x)}$$
+
+For any y such that $P(Y=y)=f_Y(y)>0$, the conditional pmf of X given that $Y=y$ is the function of x denoted by $f(x|y)$ are defined by
+
+$$f(x|y)=P(X=x|Y=y)=\frac{f(x,y)}{f_Y(y)}$$
+
+This function of y defines a pmf for a random variable. $f(y|x)\ge0$ for every y since $f(x,y)\ge0$ and $f_X(x)>0$. And
+
+$$\sum_yf(y|x)=\frac{\sum_yf(x,y)}{f_X(x)}=\frac{f_X(x)}{f_X(x)}=1$$
+
+**Definition 4.2.3** Let (X, Y) be a continuous bivariate random vector with joint pdf f(x,y) and marginal pdfs f_X(x) and f_Y(y). For any x such that $f_X(x)>0$, the conditional pdf of Y given that $X=x$ is the function of y denoted by $f(y|x)$ and defined by
+
+$$f(y|x)=\frac{f(x,y)}{f_X(x)}$$
+
+
+For any y such that $f_Y(y)>0$, the conditional pdf of X given that $Y=y$ is the function of x denoted by $f(x|y)$ and defined by
+
+$$f(x|y)=\frac{f(x,y)}{f_Y(y)}$$
+
+If g(Y) is a function of Y, then the conditional expected value of g(Y) given that $X=x$ is denoted by $E(g(Y)|x)$ and is given by
+
+$E(g(Y)|x)=\sum_yg(y)f(y|x)$ and $E(g(Y)|x)=\int_{-\infty}^{\infty}g(y)f(y|x)dy$
+
+**Example 4.2.4 (Calculating conditional pdfs)**
+
+The variance of the probability distribution described by $f(y|x)$ is called the conditional variance of Y given $X=x$. Using the notation $Var(y|x)$ for this, we have, using the ordinary definition of variance,
+
+$$Var(y|x)=E(Y^2|x)-(E(Y|x))^2$$
+
+**Definition 4.2.5** Let (X,Y) be a bivariate random vector with joint pdf or pmf f(x,y) and marginal pdfs or pmfs $f_X(x)$ and $f_Y(y)$. Then X and Y are called independent random variable if, for every $x\in\mathbf{R}$ and $y\in\mathbf{R}$,
+$$f(x,y) = f_X(x)f_Y(y)$$
+
+**Lemma 4.2.7** Let (X,Y) be a bivariate random vector with joint pdf or pmf f(x,y). X and Y are independent random variables if and only if there exist functions g(x) and hey) such that, for every $x\in\mathbf{R}$ and $y\in\mathbf{R}$,
+
+$$f(x,y)=g(x)h(y)$$
+
+**Theorem 4.2.10** Let X and Y be independent random variables. 
+
+ a. For any $A\subset\mathbf{R}$ and $B\subset\mathbf{R}$, $P(X\in A,Y\in B)=P(X\in A)P(Y\in B)$ that is, the events {$X\in A$} and {$Y\in B$} are independent events. 
+
+ b. Let g(x) be a function only of x and h(y) be a function only of y. Then
+
+$$E(g(X)h(Y))=(Eg(X))(Eh(Y))$$
+
+**Theorem 4.2.12** Let X and Y be independent random variables with moment generating functions $M_X(t)$ and $M_Y(t)$. Then the moment generating function of the random variable $Z=X+Y$ is given by
+
+$$M_Z(t)=M_X(t)M_Y(t)$$
+
+**Theorem 4.2.14** Let $X\sim n(\mu,\sigma^2)$ and $Y\sim n(\gamma,\tau^2)$ be independent normal random variables, Then the random variable $Z=X+Y$ has a $n(\mu+\gamma,\sigma^2+\tau^2)$ distribution.
+
