--- a/docs/usp537/lab_usp537.Rmd
+++ b/docs/usp537/lab_usp537.Rmd
@@ -11,9 +11,13 @@ output:
 
 ---
 
+```{r setup, include=F}
+knitr::opts_chunk$set(message=FALSE, warning=F, echo=F)
+options(width = 2000)
+options(repos="https://cran.rstudio.com")
+```
 
-
-****
+----
 
 ### 01/22	Congestion Charge
 
@@ -23,7 +27,7 @@ Albalate, D., & Bel, G. (2009). What local policy makers should know about urban
 
 Vonk Noordegraaf, D., Annema, J. A., & Van Wee, B. (2014). Policy implementation lessons from six road pricing cases. Transportation Research Part A: Policy and Practice, 59, 172-191.
 
-****
+----
 
 ### 01/29	Variable Road Pricing
 
@@ -33,7 +37,7 @@ Sullivan, E., & Burris, M. (2006). Benefit-cost analysis of variable pricing pro
 
 Janson, M., & Levinson, D. (2014). HOT or not: Driver elasticity to price on the MnPASS HOTlanes. Research in Transportation Economics, 44, 21-32.
 
-****
+----
 
 ### 02/05	Bus Rapid Transit
 
@@ -41,7 +45,7 @@ Cervero, R. (2013). Bus Rapid Transit (BRT): An Efficient and Competitive Mode o
 
 Nelson, A. C., Appleyard, B., Kannan, S., Ewing, R., Miller, M., &Eskic, D. (2013). Bus Rapid Transit and Economic Development: Case Study of the Eugene-Springfield BRT System. Journal of Public Transportation, 16(3).
 
-****
+----
 
 ### 02/12	Parking
 
@@ -51,7 +55,7 @@ Arnott, R., & Inci, E. (2006). An integrated model of downtown parking and traff
 
 Anderson, S. P., & de Palma, A. (2004). The economics of pricing parking. Journal of UrbanEconomics, 55(1), 1-20.
 
-****
+----
 
 ### 02/26	Privatization
 
@@ -61,7 +65,7 @@ Estache, A., González, M., & Trujillo, L. (2002). What does “privatization”
 
 Litman, T. (2011). Contrasting Visions of Urban Transport Critique of “Fixing Transit: The CaseFor Privatization”. Victoria Transport Policy Institute.
 
-****
+----
 
 ### 03/05	Fuel Economy Standards
 
@@ -69,7 +73,7 @@ Anderson, S. T., Parry, I. W., Sallee, J. M., & Fischer, C. (2011). Automobile f
 
 Portney, P. R., Parry, I. W., Gruenspecht, H. K., & Harrington, W. (2003). Policy Watch: The Economics of Fuel Economy Standards. The Journal of Economic Perspectives, 17(4), 203- 217.
 
-****
+----
 
 ### 03/12	Ridesharing
 
