--- a/static/stat562/note_stat562.Rmd
+++ b/static/stat562/note_stat562.Rmd
@@ -9,6 +9,22 @@ output: html_document
 
 ## 4. Multiple Random Variables
 
+### 4.3 Bivariate Transformations
+
+**Example 4.3.1 (Distribution of the sum of Poisson variables)** Let X and
+Y be independent Poisson random variables with parameters $\theta$ and $\lambda$, respectively. Thus the joint pmf of (X,Y) is
+
+$$f_{X,Y}(x,y)=\frac{\theta^xe^{-\theta}}{x!}\frac{\lambda^ye^{-\lambda}}{y!},\quad x=0,1,2,..,y=0,1,2,..$$
+
+define $U=X+Y$ and $V=Y$
+
+$$f_{U,V}(u,v)=f_{X,Y}(u-v,v)=\frac{\theta^{u-v}e^{-\theta}}{(u-v)!}\frac{\lambda^ve^{-\lambda}}{v!},\quad v=0,1,2,..,u=v,v+1,v+2,..$$
+
+**Theorem 4.3.2** if $X\sim Poisson(\theta)$ and $Y\sim Poisson(\lambda)$ and X and Y are indepedent, then $X+Y\sim Poisson(\theta+\lambda)$.
+
+
+
+
 ### 4.4 Hierarchical Models and Mixture Distributions
 
 **Theorem 4.4.3** if X and Y are any two random variables, then
