--- a/static/stat562/note_stat562.Rmd
+++ b/static/stat562/note_stat562.Rmd
@@ -74,6 +74,12 @@ If X and Y are indepent random variables, then
 
 $$Var(aX+bY)=a^2VarX+b^2VarY$$
 
+**Theorem 4.5.7** For any mndom variables X and Y,
+
+ a. $-1\le \rho_{XY}\le1 $.
+ b. $|\rho_{XY}|= 1$ if and only if there exist numbers $a\neq0$ and b such that $P(Y=aX+b)=1$. If $\rho_{XY}=1$, then $a>0$, and if $\rho_{XY}=-1$, then $a<O$.
+
+
 ## 5. Properties of a Random Sample
 
 ### 5.2 Sums of Random Variables from a Random Sample
