--- a/static/stat562/note_stat562.Rmd
+++ b/static/stat562/note_stat562.Rmd
@@ -74,11 +74,28 @@ If X and Y are indepent random variables, then
 
 $$Var(aX+bY)=a^2VarX+b^2VarY$$
 
-**Theorem 4.5.7** For any mndom variables X and Y,
+**Theorem 4.5.7** For any random variables X and Y,
 
  a. $-1\le \rho_{XY}\le1 $.
- b. $|\rho_{XY}|= 1$ if and only if there exist numbers $a\neq0$ and b such that $P(Y=aX+b)=1$. If $\rho_{XY}=1$, then $a>0$, and if $\rho_{XY}=-1$, then $a<O$.
+ b. $|\rho_{XY}|= 1$ if and only if there exist numbers $a\neq0$ and b such that $P(Y=aX+b)=1$. If $\rho_{XY}=1$, then $a>0$, and if $\rho_{XY}=-1$, then $a<0$.
 
+**Definition 4.5.10** bivariate normal pdf
+
+###4.6 Multivariate Distributions
+
+**Definition 4.6.2** multinomial distribution with m trials and cell probabilities
+
+**Theorem 4.6.4 (Multinomial Theorem)**
+
+**Definition 4.6.5** mutually independent random vectors
+
+**Theorem 4.6.6 (Generalization of Theorem 4.2. 10)**
+
+$$E(g_1(X_1)\cdots g_n(X_n))=(E(g_1(X_1))\cdots(E(g_n(X_n))$$
+
+**Theorem 4.6.7 (Generalization of Theorem 4.2.12)**
+
+$$M_Z(t)=(M_X(t))^n$$
 
 ## 5. Properties of a Random Sample
 
