--- a/static/stat561/fe_stat561.Rmd
+++ b/static/stat561/fe_stat561.Rmd
@@ -67,16 +67,11 @@ For $X\sim Uniform(a, b),\ b>a,\ μ=\frac{a+b}2,\sigma^2=\frac{(b-a)^2}{12}$, th
 
 $$P(\mu−1.5\sigma<X<\mu+1.5\sigma)=P(X<(\mu+1.5\sigma)-P(X<(\mu-1.5\sigma)=\frac{\mu+1.5\sigma-a}{b-a}-\frac{\mu-1.5\sigma-a}{b-a}$$
 
-$$=\frac{3\sigma}{b-a}=\frac{3(b-a)}{\sqrt{12}(b-a)}=\frac{\sqrt{3}}{2}=\mathbf{0.866025}4$$
-
-<!--
-$$P(\mu−1.5\sigma<X<\mu+1.5\sigma)=P(\frac{a+b}2−\frac{1.5(b-a)}{\sqrt{12}}<X<\frac{a+b}2+\frac{1.5(b-a)}{\sqrt{12}})$$
-
-$$=P(\frac{2+\sqrt3}4a+\frac{2-\sqrt3}4b<X<\frac{2-\sqrt3}4a+\frac{2+\sqrt3}4b)$$-->
+$$=\frac{3\sigma}{b-a}=\frac{3(b-a)}{\sqrt{12}(b-a)}=\frac{\sqrt{3}}{2}=\mathbf{0.8660254}$$
 
 According to Chebyshev's Inequality: for constant k>0, $P(|X−\mu|<\sigma k)\ge1-\frac{1}{k^2}$. Since k=1.5, thus
 
-$$P(\mu−1.5\sigma<X<\mu+1.5\sigma)=P(|X−\mu|<1.5\sigma)\ge1−\frac1{{1.5}^2}=\mathbf{0.5555556}$$
+$$P(\mu−1.5\sigma<X<\mu+1.5\sigma)=P(|X−\mu|<1.5\sigma)\ge1−\frac{1}{1.5^2}=\mathbf{0.5555556}$$
 
 The result shows that  $P(\mu−1.5\sigma<X<\mu+1.5\sigma)$ is larger than the amount guaranteed by Chebyshev's Inequality. Chebyshev's Inequality provides a conservative amount.
 
