--- a/static/stat565/note_stat565.Rmd
+++ b/static/stat565/note_stat565.Rmd
@@ -13,15 +13,46 @@ output: html_document
 
 ### 1.2 Some Typical Applications of Experimental Design
 
+ - Characterizing a Process
+ - Optimizing a Process
+ - Designing a Product
+ - Formulating a Product
+ - Designing a Web Page
+
 ### 1.3 Basic Principles
+
+ - randomization: both the allocation of the experimental material and the order in which the individual runs of the experiment are to be performed are randomly determined.
+ - replication: an independent repeat run of each factor combination. replication $\neq$ repeated measurements.
+ - blocking: a design technique used to improve the precision with which comparisons among the factors of
+interest are made.
+ - factorial
 
 ### 1.4 Guidelines for Designing Experiments
 
+ 1. Recognition of and statement of the problem.
+ 2. Selection of the response variable.
+ 3. Choice of factors, levels, and range.
+  - potential design factors
+   + design factors
+   + held-constant factors
+   + allowed-to-vary factors
+  - nuisance factors
+   + controllable factors
+   + uncontrollable factors
+   + noise factors
+ 4. Choice of experimental design
+ 5. Performing the experiment
+ 6. Statistical analysis of the data
+ 7. Conclusions and recommendations
+ 
 ### 1.5 A Brief History of Statistical Design
 
-### 1.6 Summary
+### 1.6 Summary: Using Statistical Techniques in Experimentation
 
-Using Statistical Techniques in Experimentation
+ 1. Use your nonstatistical knowledge of the problem
+ 2. Keep the design and analysis as simple as possible
+ 3. Recognize the difference between practical and statistical significance
+ 4. Experiments are usually iterative
 
 
 ## 2. Simple Comparative Experiments
@@ -46,9 +77,9 @@ as $n\to\infty$ is the standard normal distribution.
 
 #### 2.4.3 Choice of Sample Size
 
-#### 2.4.4 The Case Where
+#### 2.4.4 The Case Where $\sigma_1^2\neq\sigma_2^2$
 
-#### 2.4.5 The Case Where a nd re Known
+#### 2.4.5 The Case Where $\sigma_1$ and $\sigma_2$ are Known
 
 #### 2.4.6 Comparing a Single Mean to a Specified Value
 
